--- a/Ex1/index.html
+++ b/Ex1/index.html
@@ -6,6 +6,6 @@
     <title>Avaliação 1</title>
 </head>
 <body>
-    <script src="teste.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
